[tool.poetry]
name = "impfuzzy_lief"
version = "0.1.0"
description = ""
authors = ["Koh M. Nakagawa <tsunekou1019@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ssdeep = "^3.4"
lief = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.770"
isort = "^4.3.21"
pyimpfuzzy = "^0.5"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
